<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button_blue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.fhdw.devgroup.quizapp.main.ActivityMain" >

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/welcome_text"
        android:textColor="@color/mustard"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:background="@drawable/custom_button_green"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/start_quiz"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/highscore"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

 </LinearLayout>
